--- a/.gitignore
+++ b/.gitignore
@@ -198,3 +198,43 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+
+
+# C++
+# vscode settings
+.vscode/
+
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+run
+test
