C++ day 16 and 17, some more BFS

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Ignores inputs
 *.txt
 
+# Ignores tracking sheet
+*.xlsx
 
 # VS Code
 .vscode/*
@@ -241,3 +243,24 @@ cython_debug/
 *.app
 run
 test
+
+
+# Go
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Test binary, built with `go test -c`
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+# Dependency directories (remove the comment below to include it)
+# vendor/
+
+# Go workspace file
+go.work
