--- a/.gitignore
+++ b/.gitignore
@@ -549,3 +549,12 @@ dist
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# scala-cli
+.scala-build/
+.bsp/
+
+# Scala IDE/tooling
+.metals/
+.bloop/
+.idea/
